--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Server for Diplomacy board game clone",
   "main": "build/index.js",
   "scripts": {
+    "build": "tsc",
+    "dev": "ts-node ./src/index.ts",
+    "start": "node ./build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +18,12 @@
   "bugs": {
     "url": "https://github.com/mattsells/diplomacy-server/issues"
   },
-  "homepage": "https://github.com/mattsells/diplomacy-server#readme"
+  "homepage": "https://github.com/mattsells/diplomacy-server#readme",
+  "devDependencies": {
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "express": "^4.17.2"
+  }
 }
