--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Server for Diplomacy board game clone",
   "main": "build/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "webpack",
     "dev": "ts-node ./src/index.ts",
     "start": "node ./build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,8 +20,11 @@
   },
   "homepage": "https://github.com/mattsells/diplomacy-server#readme",
   "devDependencies": {
+    "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "webpack": "^5.66.0",
+    "webpack-cli": "^4.9.1"
   },
   "dependencies": {
     "express": "^4.17.2"
