--- a/package.json
+++ b/package.json
@@ -1,32 +1,38 @@
 {
-  "name": "diplomacy-server",
-  "version": "1.0.0",
-  "description": "Server for Diplomacy board game clone",
-  "main": "build/index.js",
-  "scripts": {
-    "build": "webpack",
-    "dev": "ts-node ./src/index.ts",
-    "start": "node ./build/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mattsells/diplomacy-server.git"
-  },
-  "author": "Matthew Sells",
-  "license": "UNLICENSED",
-  "bugs": {
-    "url": "https://github.com/mattsells/diplomacy-server/issues"
-  },
-  "homepage": "https://github.com/mattsells/diplomacy-server#readme",
-  "devDependencies": {
-    "ts-loader": "^9.2.6",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.4",
-    "webpack": "^5.66.0",
-    "webpack-cli": "^4.9.1"
-  },
-  "dependencies": {
-    "express": "^4.17.2"
-  }
+	"name": "diplomacy-server",
+	"version": "1.0.0",
+	"description": "Server for Diplomacy board game clone",
+	"main": "build/index.js",
+	"scripts": {
+		"build": "webpack",
+		"dev": "ts-node ./src/index.ts",
+		"prettier:check": "prettier --check .",
+		"prettier:fix": "prettier --write .",
+		"start": "node ./build/index.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/mattsells/diplomacy-server.git"
+	},
+	"author": "Matthew Sells",
+	"license": "UNLICENSED",
+	"bugs": {
+		"url": "https://github.com/mattsells/diplomacy-server/issues"
+	},
+	"homepage": "https://github.com/mattsells/diplomacy-server#readme",
+	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^5.10.0",
+		"@typescript-eslint/parser": "^5.10.0",
+		"eslint": "^8.7.0",
+		"prettier": "2.5.1",
+		"ts-loader": "^9.2.6",
+		"ts-node": "^10.4.0",
+		"typescript": "^4.5.4",
+		"webpack": "^5.66.0",
+		"webpack-cli": "^4.9.1"
+	},
+	"dependencies": {
+		"express": "^4.17.2"
+	}
 }
