--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "build/index.js",
 	"scripts": {
 		"build": "webpack",
-		"dev": "ts-node ./src/index.ts",
+		"dev": "nodemon ./src/index.ts",
 		"prettier:check": "prettier --check .",
 		"prettier:fix": "prettier --write .",
 		"start": "node ./build/index.js",
@@ -22,9 +22,12 @@
 	},
 	"homepage": "https://github.com/mattsells/diplomacy-server#readme",
 	"devDependencies": {
+		"@types/express": "^4.17.13",
+		"@types/morgan": "^1.9.3",
 		"@typescript-eslint/eslint-plugin": "^5.10.0",
 		"@typescript-eslint/parser": "^5.10.0",
 		"eslint": "^8.7.0",
+		"nodemon": "^2.0.15",
 		"prettier": "2.5.1",
 		"ts-loader": "^9.2.6",
 		"ts-node": "^10.4.0",
@@ -33,6 +36,7 @@
 		"webpack-cli": "^4.9.1"
 	},
 	"dependencies": {
-		"express": "^4.17.2"
+		"express": "^4.17.2",
+		"morgan": "^1.10.0"
 	}
 }
