--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
 	"devDependencies": {
 		"@types/express": "^4.17.13",
 		"@types/morgan": "^1.9.3",
+		"@types/node": "^17.0.9",
 		"@typescript-eslint/eslint-plugin": "^5.10.0",
 		"@typescript-eslint/parser": "^5.10.0",
 		"eslint": "^8.7.0",
 		"nodemon": "^2.0.15",
 		"prettier": "2.5.1",
+		"prisma": "^3.8.1",
 		"ts-loader": "^9.2.6",
 		"ts-node": "^10.4.0",
 		"typescript": "^4.5.4",
@@ -38,6 +40,7 @@
 		"webpack-cli": "^4.9.1"
 	},
 	"dependencies": {
+		"@prisma/client": "^3.8.1",
 		"express": "^4.17.2",
 		"morgan": "^1.10.0"
 	}
