--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
 	},
 	"homepage": "https://github.com/mattsells/diplomacy-server#readme",
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.0",
 		"@types/express": "^4.17.13",
 		"@types/morgan": "^1.9.3",
 		"@types/node": "^17.0.9",
+		"@types/passport": "^1.0.7",
+		"@types/passport-local": "^1.0.34",
 		"@typescript-eslint/eslint-plugin": "^5.10.0",
 		"@typescript-eslint/parser": "^5.10.0",
 		"eslint": "^8.7.0",
@@ -41,7 +44,10 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^3.8.1",
+		"bcrypt": "^5.0.1",
 		"express": "^4.17.2",
-		"morgan": "^1.10.0"
+		"morgan": "^1.10.0",
+		"passport": "^0.5.2",
+		"passport-local": "^1.0.0"
 	}
 }
