--- a/package.json
+++ b/package.json
@@ -46,8 +46,12 @@
 		"@prisma/client": "^3.8.1",
 		"bcrypt": "^5.0.1",
 		"express": "^4.17.2",
+		"module-alias": "^2.2.2",
 		"morgan": "^1.10.0",
 		"passport": "^0.5.2",
 		"passport-local": "^1.0.0"
-	}
+	},
+	"_moduleAliases": {
+    "@": "./src"
+  }
 }
