--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "build/index.js",
 	"scripts": {
 		"build": "webpack",
-		"dev": "nodemon ./src/index.ts",
+		"dev": "nodemon -r dotenv/config ./src/index.ts",
 		"lint:check": "eslint ./",
 		"lint:fix": "eslint --fix ./",
 		"prettier:check": "prettier --check .",
@@ -29,6 +29,7 @@
 		"@types/morgan": "^1.9.3",
 		"@types/node": "^17.0.9",
 		"@types/passport": "^1.0.7",
+		"@types/passport-jwt": "^3.0.6",
 		"@types/passport-local": "^1.0.34",
 		"@typescript-eslint/eslint-plugin": "^5.10.0",
 		"@typescript-eslint/parser": "^5.10.0",
@@ -45,13 +46,15 @@
 	"dependencies": {
 		"@prisma/client": "^3.8.1",
 		"bcrypt": "^5.0.1",
+		"dotenv": "^14.2.0",
 		"express": "^4.17.2",
 		"module-alias": "^2.2.2",
 		"morgan": "^1.10.0",
 		"passport": "^0.5.2",
+		"passport-jwt": "^4.0.0",
 		"passport-local": "^1.0.0"
 	},
 	"_moduleAliases": {
-    "@": "./src"
-  }
+		"@": "./src"
+	}
 }
