--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"prettier:check": "prettier --check .",
 		"prettier:fix": "prettier --write .",
 		"start": "node ./build/index.js",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "jest"
 	},
 	"repository": {
 		"type": "git",
@@ -26,6 +26,7 @@
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.0",
 		"@types/express": "^4.17.13",
+		"@types/jest": "^27.4.0",
 		"@types/morgan": "^1.9.3",
 		"@types/node": "^17.0.9",
 		"@types/passport": "^1.0.7",
@@ -34,9 +35,11 @@
 		"@typescript-eslint/eslint-plugin": "^5.10.0",
 		"@typescript-eslint/parser": "^5.10.0",
 		"eslint": "^8.7.0",
+		"jest": "^27.4.7",
 		"nodemon": "^2.0.15",
 		"prettier": "2.5.1",
 		"prisma": "^3.8.1",
+		"ts-jest": "^27.1.3",
 		"ts-loader": "^9.2.6",
 		"ts-node": "^10.4.0",
 		"typescript": "^4.5.4",
