--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	},
 	"homepage": "https://github.com/mattsells/diplomacy-server#readme",
 	"devDependencies": {
+		"@trivago/prettier-plugin-sort-imports": "^3.1.1",
 		"@types/bcrypt": "^5.0.0",
 		"@types/express": "^4.17.13",
 		"@types/jest": "^27.4.0",
