--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	"devDependencies": {
 		"@trivago/prettier-plugin-sort-imports": "^3.1.1",
 		"@types/bcrypt": "^5.0.0",
+		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
 		"@types/jest": "^27.4.0",
 		"@types/morgan": "^1.9.3",
@@ -50,6 +51,7 @@
 	"dependencies": {
 		"@prisma/client": "^3.8.1",
 		"bcrypt": "^5.0.1",
+		"cors": "^2.8.5",
 		"dotenv": "^14.2.0",
 		"express": "^4.17.2",
 		"express-validator": "^6.14.0",
